adding markdown feature

--- a/article/templates/base.html
+++ b/article/templates/base.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
     <link rel="stylesheet" href="{% static 'article/css/pace.css' %}">
     <link rel="stylesheet" href="{% static 'article/css/custom.css' %}">
+    <link rel="stylesheet" href="{% static 'article/css/highlights/github.css' %}">
 
     <!-- js -->
     <script src="{ % static 'article/js/jquery-2.1.3.min.js' %}"></script>
