--- a/article/templates/detail.html
+++ b/article/templates/detail.html
@@ -8,8 +8,8 @@
                             <span class="post-category"><a href="#">{{ post.category.name }}</a></span>
                             <span class="post-date"><a href="#"><time class="entry-date"
                                                                       datetime={{ post.pub_date }}>{{ post.pub_date }}</time></a></span>
-                            <span class="comments-link"><a href="#">4 Comments</a></span>
-                            <span class="views-count"><a href="#">588 Read</a></span>
+                            <span class="comments-link"><a href="#">{{ post.comments_set.count }} Comments</a></span>
+                            <span class="views-count"><a href="#">{{ post.views }} Read</a></span>
                         </div>
                     </header>
                     <div class="entry-content clearfix">
