--- a/article/templates/index.html
+++ b/article/templates/index.html
@@ -11,8 +11,8 @@
                                 <span class="post-category"><a href="#">{{ post.category }}</a></span>
                                 <span class="post-date"><a href="#"><time class="entry-date"
                                                                           datetime={{ post.pub_date }}>{{ post.pub_date }}</time></a></span>
-                                <span class="comments-link"><a href="#">4 comments</a></span>
-                                <span class="views-count"><a href="#">588 read</a></span>
+                                <span class="comments-link"><a href="#">{{ post.comments_set.count }} Comments</a></span>
+                                <span class="views-count"><a href="#">{{ post.views }} Read</a></span>
                             </div>
                         </header>
                         <div class="entry-content clearfix">
