--- a/article/templates/index.html
+++ b/article/templates/index.html
@@ -26,20 +26,33 @@
                     <div class="no-post">No Publised Blog Yet!</div>
                 {% endfor %}
 
-                {% if is_paginated %}
-                <div class="pagination-simple">
-                  <!-- 如果当前页还有上一页，显示一个上一页的按钮 -->
-                  {% if page_obj.has_previous %}
-                    <a href="?page={{ page_obj.previous_page_number }}">Previous Page</a>
-                  {% endif %}
-                  <!-- 显示当前页面信息 -->
-                  <span class="current">{{ page_obj.number }}/{{ paginator.num_pages }}</span>
-                  <!-- 如果当前页还有下一页，显示一个下一页的按钮 -->
-                  {% if page_obj.has_next %}
-                    <a href="?page={{ page_obj.next_page_number }}">Next Page</a>
-                  {% endif %}
-                </div>
+            {% if is_paginated %}
+            <div class="pagination">
+              {% if first %}
+                <a href="?page=1">1</a>
+              {% endif %}
+              {% if left %}
+                {% if left_has_more %}
+                    <span>...</span>
                 {% endif %}
+                {% for i in left %}
+                    <a href="?page={{ i }}">{{ i }}</a>
+                {% endfor %}
+              {% endif %}
+              <a href="?page={{ page_obj.number }}" style="color: red">{{ page_obj.number }}</a>
+              {% if right %}
+                {% for i in right %}
+                    <a href="?page={{ i }}">{{ i }}</a>
+                {% endfor %}
+                {% if right_has_more %}
+                    <span>...</span>
+                {% endif %}
+              {% endif %}
+              {% if last %}
+                <a href="?page={{ paginator.num_pages }}">{{ paginator.num_pages }}</a>
+              {% endif %}
+            </div>
+            {% endif %}
 
 
 {% endblock main %}
