--- a/article/templates/detail.html
+++ b/article/templates/detail.html
@@ -1,200 +1,103 @@
 {% extends 'base.html' %}
 
 {% block main %}
-                <article class="post post-{{ post.pk }}">
-                    <header class="entry-header">
-                        <h1 class="entry-title">{{ post.title }}</h1>
-                        <div class="entry-meta">
-                            <span class="post-category"><a href="#">{{ post.category.name }}</a></span>
-                            <span class="post-date"><a href="#"><time class="entry-date"
-                                                                      datetime={{ post.pub_date }}>{{ post.pub_date }}</time></a></span>
-                            <span class="comments-link"><a href="#">{{ post.comments_set.count }} Comments</a></span>
-                            <span class="views-count"><a href="#">{{ post.views }} Read</a></span>
-                        </div>
-                    </header>
-                    <div class="entry-content clearfix">
-                        {{ post.content|safe }}
-                    </div>
-                </article>
-                <section class="comment-area" id="comment-area">
-                    <hr>
-                    <h3>Make Comments</h3>
-                    <form action="{% url 'comments:post_comment' post.pk%}" method="post" class="comment-form">
-                        {% csrf_token %}
-                        <div class="row">
-                            <div class="col-md-4">
-                                <label for="{{ form.name.id_for_label }}">Name：</label>
-                                {{ form.name }}
-                                {{ form.name.errors }}
-                            </div>
-                            <div class="col-md-4">
-                                <label for="{{ form.email.id_for_label }}">Email Address：</label>
-                                {{ form.email }}
-                                {{ form.email.errors }}
-                            </div>
-                            <div class="col-md-4">
-                                <label for="{{ form.url.id_for_label }}">Website：</label>
-                                {{ form.url }}
-                                {{ form.url.errors }}
-                            </div>
-                            <div class="col-md-12">
-                                <label for="{{ form.text.id_for_label }}">Comments：</label>
-                                {{ form.text }}
-                                {{ form.text.errors }}
-                                <button type="submit" class="comment-btn">Comment</button>
-                            </div>
-                        </div>    <!-- row -->
-                    </form>
-                    <div class="comment-list-panel">
-                        <h4>Comment List，Total <span>{{ comment_list.count }}</span> Comments</h4>
-                        <ul class="comment-list list-unstyled">
-                            {% for comment in comment_list %}
-                            <li class="comment-item">
-                                <span class="nickname">{{ comment.name }}</span>
-                                <time class="submit-date" datetime="{{ comment.created_time }}">{{ comment.created_time }}</time>
-                                <div class="text">
-                                    {{ comment.text }}
-                                </div>
-                            </li>
-                            {% empty %}
-                            No comment yet!
-                            {% endfor %}
-                         </ul>
-                    </div>
-                </section>
-{% endblock main %}
-{% block toc %}
-                <div class="widget widget-content">
-                    <h3 class="widget-title">文章目录</h3>
-                    <ul>
-                        <li>
-                            <a href="#">教程特点</a>
-                        </li>
-                        <li>
-                            <a href="#">谁适合这个教程</a>
-                        </li>
-                        <li>
-                            <a href="#">在线预览</a>
-                        </li>
-                        <li>
-                            <a href="#">资源列表</a>
-                        </li>
-                        <li>
-                            <a href="#">获取帮助</a>
-                        </li>
-                    </ul>
-                </div>
-{% endblock toc %}
-                    <h3 class="widget-title">最新文章</h3>
-                    <ul>
-                        <li>
-                            <a href="#">Django 博客开发入门教程：前言</a>
-                        </li>
-                        <li>
-                            <a href="#">Django 博客使用 Markdown 自动生成文章目录</a>
-                        </li>
-                        <li>
-                            <a href="#">部署 Django 博客</a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="widget widget-archives">
-                    <h3 class="widget-title">归档</h3>
-                    <ul>
-                        <li>
-                            <a href="#">2017 年 5 月</a>
-                        </li>
-                        <li>
-                            <a href="#">2017 年 4 月</a>
-                        </li>
-                        <li>
-                            <a href="#">2017 年 3 月</a>
-                        </li>
-                    </ul>
-                </div>
-
-                <div class="widget widget-category">
-                    <h3 class="widget-title">分类</h3>
-                    <ul>
-                        <li>
-                            <a href="#">Django 博客教程 <span class="post-count">(13)</span></a>
-                        </li>
-                        <li>
-                            <a href="#">Python 教程 <span class="post-count">(11)</span></a>
-                        </li>
-                        <li>
-                            <a href="#">Django 用户认证 <span class="post-count">(8)</span></a>
-                        </li>
-                    </ul>
-                </div>
-
-                <div class="widget widget-tag-cloud">
-                    <h3 class="widget-title">标签云</h3>
-                    <ul>
-                        <li>
-                            <a href="#">Django</a>
-                        </li>
-                        <li>
-                            <a href="#">Python</a>
-                        </li>
-                        <li>
-                            <a href="#">Java</a>
-                        </li>
-                        <li>
-                            <a href="#">笔记</a>
-                        </li>
-                        <li>
-                            <a href="#">文档</a>
-                        </li>
-                        <li>
-                            <a href="#">AngularJS</a>
-                        </li>
-                        <li>
-                            <a href="#">CSS</a>
-                        </li>
-                        <li>
-                            <a href="#">JavaScript</a>
-                        </li>
-                        <li>
-                            <a href="#">Snippet</a>
-                        </li>
-                        <li>
-                            <a href="#">jQuery</a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="rss">
-                    <a href=""><span class="ion-social-rss-outline"></span> RSS 订阅</a>
-                </div>
-            </aside>
-        </div>
-    </div>
-</div>
-<footer id="site-footer">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <p class="copyright">&copy 2017 - Collect from <a href="http://www.cssmoban.com/"
-                                                                  target="_blank" title="模板之家">模板之家</a>
-                    - Modified by <a href="http://zmrenwu.com/" title="网页模板" target="_blank">追梦人物的博客</a>
-                </p>
+    <article class="post post-{{ post.pk }}">
+        <header class="entry-header">
+            <h1 class="entry-title">{{ post.title }}</h1>
+            <div class="entry-meta">
+                <span class="post-category"><a href="#">{{ post.category.name }}</a></span>
+                <span class="post-date"><a href="#"><time class="entry-date"
+                                                          datetime={{ post.pub_date }}>{{ post.pub_date }}</time></a></span>
+                <span class="comments-link"><a href="#">{{ post.comments_set.count }} Comments</a></span>
+                <span class="views-count"><a href="#">{{ post.views }} Read</a></span>
             </div>
+        </header>
+        <div class="entry-content clearfix">
+            {{ post.content|safe }}
+        </div>
+    </article>
+    <div class="entry-content clearfix">
+        {{ post.body|safe }}
+        <div class="widget-tag-cloud">
+            <ul>
+                Tag：
+                {% for tag in post.tags.all %}
+                    <li><a href="{% url 'article:tag' tag.pk %}"># {{ tag.name }}</a></li>
+                {% endfor %}
+            </ul>
         </div>
     </div>
-</footer>
+    <section class="comment-area" id="comment-area">
+        <hr>
+        <h3>Make Comments</h3>
+        <form action="{% url 'comments:post_comment' post.pk %}" method="post" class="comment-form">
+            {% csrf_token %}
+            <div class="row">
+                <div class="col-md-4">
+                    <label for="{{ form.name.id_for_label }}">Name：</label>
+                    {{ form.name }}
+                    {{ form.name.errors }}
+                </div>
+                <div class="col-md-4">
+                    <label for="{{ form.email.id_for_label }}">Email Address：</label>
+                    {{ form.email }}
+                    {{ form.email.errors }}
+                </div>
+                <div class="col-md-4">
+                    <label for="{{ form.url.id_for_label }}">Website：</label>
+                    {{ form.url }}
+                    {{ form.url.errors }}
+                </div>
+                <div class="col-md-12">
+                    <label for="{{ form.text.id_for_label }}">Comments：</label>
+                    {{ form.text }}
+                    {{ form.text.errors }}
+                    <button type="submit" class="comment-btn">Comment</button>
+                </div>
+            </div>    <!-- row -->
+        </form>
+        <div class="comment-list-panel">
+            <h4>Comment List，Total <span>{{ comment_list.count }}</span> Comments</h4>
+            <ul class="comment-list list-unstyled">
+                {% for comment in comment_list %}
+                    <li class="comment-item">
+                        <span class="nickname">{{ comment.name }}</span>
+                        <time class="submit-date"
+                              datetime="{{ comment.created_time }}">{{ comment.created_time }}</time>
+                        <div class="text">
+                            {{ comment.text }}
+                        </div>
+                    </li>
+                {% empty %}
+                    No comment yet!
+                {% endfor %}
+            </ul>
+        </div>
+    </section>
+{% endblock main %}
 
-<!-- Mobile Menu -->
-<div class="overlay overlay-hugeinc">
-    <button type="button" class="overlay-close"><span class="ion-ios-close-empty"></span></button>
-    <nav>
+{% block toc %}
+    <div class="widget widget-content">
+        <h3 class="widget-title">文章目录</h3>
         <ul>
-            <li><a href="index.html">首页</a></li>
-            <li><a href="full-width.html">博客</a></li>
-            <li><a href="about.html">关于</a></li>
-            <li><a href="contact.html">联系</a></li>
+            <li>
+                <a href="#">教程特点</a>
+            </li>
+            <li>
+                <a href="#">谁适合这个教程</a>
+            </li>
+            <li>
+                <a href="#">在线预览</a>
+            </li>
+            <li>
+                <a href="#">资源列表</a>
+            </li>
+            <li>
+                <a href="#">获取帮助</a>
+            </li>
         </ul>
-    </nav>
-</div>
+    </div>
+{% endblock toc %}
 
 <script src="js/script.js"></script>
 
